# doxearch

./: README.md  build_nuitka.py  main.py  pyproject.toml  pytest.ini
.github/workflows/: build.yml
doxearch/: context_manager.py  doxearch.py  exceptions.py  model_manager.py
doxearch/doc_index/: doc_index.py  types.py
doxearch/doc_index/sqlite_index/: exceptions.py  sqlite_index.py
doxearch/doc_parser/: doc_parser.py
doxearch/doc_parser/parsers/: docx_parser.py  pdf_parser.py
doxearch/tf_idf/: tf_idf.py
doxearch/tokenizer/: tokenizer.py
doxearch/tokenizer/spacy_tokenizer/: spacy_tokenizer.py
doxearch/utils/: app_dir.py  file_hash.py  general.py
doxearch_cli/: main.py
doxearch_gui/: __init__.py  main.py
doxearch_gui/tabs/: directories_tab.py  documents_tab.py  index_tab.py  models_tab.py  search_tab.py
doxearch_gui/utils/: file_operations.py
doxearch_gui/workers/: index_worker.py  model_download_worker.py  search_worker.py
tests/: test_context_manager.py
tests/test_doc_index/test_sqlite_index/: test_sqlite_index.py
tests/test_doc_parser/test_parsers/: test_docx_parser.py  test_pdf_parser.py
tests/test_tokenizer/test_spacy_tokenizer/: test_spacy_tokenizer.py
